--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYZUFNBcOl3OoBN0xT017b9FIPTEu5ozY&libraries=places"></script>
 
     <!-- build:css styles/vendor.min.css -->
     <!-- bower:css -->
